# qara

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  qara_project_plan.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-ml.yml  publish.yml
examples/: README.md  script_long_process.py  script_train_mnist_crash.py  script_train_mnist_normal.py
plugins/: __init__.py
plugins/ml/: LICENSE  README.md  pyproject.toml
plugins/ml/src/qara_ml/: __init__.py  gpu.py  loss.py  plugin.py
src/qara/: __main__.py  cli.py
src/qara/channels/: base.py  formatting.py  telegram.py
src/qara/config/: loader.py  schema.py
src/qara/core/: bus.py  command_handler.py  daemon.py  event_engine.py  events.py  registry.py  watcher.py
src/qara/platform/: detector.py  launchd.py  systemd.py  windows_scm.py
src/qara/plugins/: __init__.py  base.py
src/qara/storage/: log.py
src/qara/transport/: client.py  server.py
tests/: test_command_handler.py  test_config.py  test_event_engine.py  test_events.py  test_registry.py  test_storage.py  test_watcher.py
