[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qara"
version = "0.2.0"
description = "Cross-platform process monitor with Telegram notifications and remote control"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["process", "monitor", "telegram", "notifications", "daemon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "aiogram>=3.0",
    "platformdirs>=4.0",
    "psutil>=5.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
windows = ["pywin32"]
dev     = [
    "mypy>=1.0",
    "pre-commit",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
qara = "qara.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pre-commit",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["psutil", "psutil.*", "win32serviceutil", "win32serviceutil.*", "pywintypes", "win32api"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/qara"]
