[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qara-ml"
version = "0.1.0"
description = "ML plugin for qara — GPU metrics and loss tracking"
requires-python = ">=3.11"
dependencies = [
    "qara>=0.1.0",
    "nvidia-ml-py>=12.0",
]

[project.entry-points."qara.plugins"]
ml = "qara_ml:MLPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/qara_ml"]
