[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qara-ml"
version = "0.1.0"
description = "ML plugin for qara — GPU metrics and loss tracking"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["qara", "gpu", "training", "monitor", "nvidia", "pynvml", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "qara>=0.1.0",
    "nvidia-ml-py>=12.0",
]

[project.entry-points."qara.plugins"]
ml = "qara_ml:MLPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/qara_ml"]
